--- a/HTML/landingPage.html
+++ b/HTML/landingPage.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheEggMan</title>
-    <link rel="stylesheet" src="/CSS/landingPage.css">
+    <link rel="stylesheet" href="/CSS/landingPage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Oxygen&family=PT+Sans&family=Red+Hat+Display:ital@1&display=swap" rel="stylesheet">
     <script src="/JavaScript/landingPage.js"></script>
 </head>
 <body>
@@ -13,8 +14,15 @@
         <h1>The Egg Man</h1>
     </header>
     <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">Blog</a></li>
+        </ul>
     </nav>
-    <main></main>
+    <main>
+        <section id="sidenav"></section>
+    </main>
     <footer></footer>
 </body>
 </html>
