--- a/Landing-Page/HTML/landingPage.html
+++ b/Landing-Page/HTML/landingPage.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheEggMan</title>
-    <link rel="stylesheet" href="/CSS/landingPage.css">
+    <link rel="stylesheet" href="/Landing-Page/CSS/landingPage.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Oxygen&family=PT+Sans&family=Red+Hat+Display:ital@1&display=swap" rel="stylesheet">
-    <script src="/JavaScript/landingPage.js"></script>
+   
 </head>
 <body>
     <header>
@@ -16,8 +16,8 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Recipes</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="/Recipes/Home/HTML/recipeHome.html">Recipes</a></li>
+            <li><a href="/Blog/Blog-Home/HTML/blogHome.html">Blog</a></li>
         </ul>
     </nav>
     <main>
