font-family heading
I want the heading to be clear to read but more stylized like a fat cursive

--- a/Recipes/Home/HTML/recipeHome.html
+++ b/Recipes/Home/HTML/recipeHome.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheEggMan-Recipes-Home</title>
     <link rel="stylesheet" href="/Recipes/Home/CSS/styleRecipeHome.css">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Oxygen&family=PT+Sans&family=Red+Hat+Display:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
